@@ -48,6 +48,10 @@ sed -i "s|</body>.*|<div id=\"turnkey-credit\" style=\"text-align:center;font-si
 lighty-disable-mod ssl
 lighty-enable-mod phpldapadmin
 
+# copy the samba schema to the ldap config directory
+zcat /usr/share/doc/samba-doc/examples/LDAP/samba.schema.gz > /etc/ldap/schema/samba.schema
+zcat /usr/share/doc/samba-doc/examples/LDAP/samba.ldif.gz > /etc/ldap/schema/samba.ldif
+
 # ldapscripts: enable params to be configured in inithook
 CONF=/etc/ldapscripts/ldapscripts.conf
 sed -i "s|^#SERVER|SERVER|" $CONF
