@@ -1,0 +1,33 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+
+<template>
+<askcontainer>1</askcontainer>
+<description>New Samba Domain</description>
+<icon>ldap-dc.png</icon>
+<invalid>0</invalid>
+<rdn>sambaDomainName</rdn>
+<!--<regexp>^ou=People,o=.*,</regexp>-->
+<title>TurnKey Linux: Samba Domain</title>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="sambaDomain"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="sambaDomainName">
+	<display>Samba Domain Name</display>
+	<order>1</order>
+	<page>1</page>
+</attribute>
+<attribute id="sambaSID">
+	<display>Samba SID</display>
+	<hint>Samba SID is in the format S-1-5-21-x-y-z</hint>
+	<order>2</order>
+	<page>1</page>
+	<value>S-1-5-21-</value>
+</attribute>
+</attributes>
+
+</template>
