@@ -1,0 +1,66 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+
+<template>
+<askcontainer>1</askcontainer>
+<description>New Samba Machine</description>
+<icon>server.png</icon>
+<invalid>0</invalid>
+<rdn>uid</rdn>
+<!--<regexp>^ou=People,o=.*,</regexp>-->
+<title>TurnKey Linux: Samba Machine</title>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="sambaSAMAccount"></objectClass>
+<objectClass id="posixAccount"></objectClass>
+<objectClass id="account"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="uid">
+	<display>Machine Name</display>
+	<hint>The machine name should end with a $</hint>
+	<icon>terminal.png</icon>
+	<onchange>=autoFill(cn;%uid%)</onchange>
+	<order>1</order>
+	<page>1</page>
+</attribute>
+<attribute id="uidNumber">
+	<display>UID Number</display>
+	<order>2</order>
+	<page>1</page>
+	<value><![CDATA[=php.GetNextNumber(/;uidNumber)]]></value>
+</attribute>
+<attribute id="gidNumber">
+	<display>GID Number</display>
+	<order>3</order>
+	<page>1</page>
+	<value><![CDATA[=php.PickList(/;(&(objectClass=posixGroup));gidNumber;%cn%;;;;cn)]]></value>
+</attribute>
+<attribute id="sambaSID">
+	<display>Samba SID</display>
+	<helper>
+		<id>sidsuffix</id>
+		<value><![CDATA[=php.GetNextNumber(/;uidNumber;;;*2,+1000)]]></value>
+	</helper>
+	<order>2</order>
+	<page>1</page>
+	<post>=php.Join(-;%sambaSID%,%sidsuffix%)</post>
+	<value><![CDATA[=php.PickList(/;(&(objectClass=sambaDomain));sambaSID;%sambaSID% (%sambaDomainName%);;;;sambaDomainName)]]></value>
+</attribute>
+<attribute id="sambaAcctFlags">
+	<hidden>1</hidden>
+	<value>[W]</value>
+</attribute>
+<attribute id="homeDirectory">
+	<hidden>1</hidden>
+	<value>/dev/null</value>
+</attribute>
+<attribute id="cn">
+	<hidden>1</hidden>
+	<value></value>
+</attribute>
+</attributes>
+
+</template>
