@@ -1,0 +1,181 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+<template>
+<title>TurnKey Linux: Samba Account</title>
+<!--<regexp>^ou=People,o=.*,</regexp>-->
+<icon>ldap-user.png</icon>
+<description>New Samba Account</description>
+<askcontainer>1</askcontainer>
+<rdn>uid</rdn>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="inetOrgPerson"></objectClass>
+<objectClass id="sambaSAMAccount"></objectClass>
+<objectClass id="posixAccount"></objectClass>
+<objectClass id="shadowAccount"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="givenName">
+	<display>First name</display>
+	<icon>ldap-uid.png</icon>
+	<onchange>=autoFill(cn;%givenName% %sn%)</onchange>
+	<onchange>=autoFill(uid;%givenName|0-1/l%%sn/l%)</onchange>
+	<order>1</order>
+	<page>1</page>
+</attribute>
+<attribute id="sn">
+	<display>Last name</display>
+	<onchange>=autoFill(cn;%givenName% %sn%)</onchange>
+	<onchange>=autoFill(uid;%givenName|0-1/l%%sn/l%)</onchange>
+	<order>2</order>
+	<page>1</page>
+</attribute>
+<attribute id="cn">
+	<display>Common Name</display>
+	<order>3</order>
+	<page>1</page>
+	<spacer>1</spacer>
+</attribute>
+<attribute id="uid">
+	<display>User ID</display>
+	<onchange>=autoFill(mail;%uid%@example.com)</onchange>
+	<onchange>=autoFill(homeDirectory;/home/%uid%)</onchange>
+	<order>4</order>
+	<spacer>1</spacer>
+	<page>1</page>
+</attribute>
+<attribute id="mail">
+	<display>User Email</display>
+	<order>5</order>
+	<page>1</page>
+	<spacer>1</spacer>
+</attribute>
+<attribute id="uidNumber">
+	<display>UID Number</display>
+	<order>6</order>
+	<page>1</page>
+	<value><![CDATA[=php.GetNextNumber(/;uidNumber)]]></value>
+</attribute>
+<attribute id="sambaSID">
+	<display>Samba SID</display>
+	<hint>Use 2*UIDNumber+1000</hint>
+	<helper>
+		<id>sidsuffix</id>
+		<location>side</location>
+		<value><![CDATA[=php.GetNextNumber(/;uidNumber;;;*2,+1000)]]></value>
+	</helper>
+	<order>7</order>
+	<page>1</page>
+	<post>=php.Join(-;(%sambaSID%,%sidsuffix%))</post>
+	<spacer>1</spacer>
+	<value><![CDATA[=php.PickList(/;(&(objectClass=sambaDomain));sambaSID;%sambaSID% (%sambaDomainName%);;;;sambaDomainName)]]></value>
+</attribute>
+<attribute id="userPassword">
+	<display>Password</display>
+	<icon>lock.png</icon>
+	<value><![CDATA[=php.RandomPassword()]]></value>
+	<onchange>=autoFill(sambaLMPassword;%userPassword%)</onchange>
+	<onchange>=autoFill(sambaNTPassword;%userPassword%)</onchange>
+	<order>8</order>
+	<page>1</page>
+	<post>=php.PasswordEncrypt(%enc%;%userPassword%)</post>
+	<verify>0</verify>
+</attribute>
+<attribute id="sambaLMPassword">
+	<display>LM Password</display>
+	<order>9</order>
+	<page>1</page>
+	<post>=php.PasswordEncrypt(LM;%sambaLMPassword%)</post>
+	<type>password</type>
+</attribute>
+<attribute id="sambaNTPassword">
+	<display>NT Password</display>
+	<order>10</order>
+	<page>1</page>
+	<post>=php.PasswordEncrypt(NT;%sambaNTPassword%)</post>
+	<spacer>1</spacer>
+	<type>password</type>
+</attribute>
+<attribute id="loginShell">
+	<display>Login shell</display>
+	<icon>terminal.png</icon>
+	<order>11</order>
+	<page>1</page>
+	<!-- <value><![CDATA[=php.PickList(/;(&(objectClass=posixAccount));loginShell;%loginShell%;;;;loginShell)]]></value> -->
+	<type>select</type>
+	<value id="/bin/dash">Almquist Shell</value>
+	<value id="/bin/bash">Bourne Shell</value>
+	<value id="/bin/csh">C Shell</value>
+	<value id="/bin/tsh">Turbo Shell</value>
+	<value id="/bin/false">None</value>
+</attribute>
+<attribute id="gidNumber">
+	<display>Group</display>
+	<order>12</order>
+	<page>1</page>
+	<value><![CDATA[=php.PickList(/;(&(objectClass=posixGroup));gidNumber;%cn%;;;;cn)]]></value>
+</attribute>
+<!--
+<attribute id="sambaPrimaryGroupSID">
+	<display>Primary Group ID</display>
+	<helper>
+		<id>sidpgsuffix</id>
+		<location>side</location>
+		<value></value>
+	</helper>
+	<order>13</order>
+	<page>1</page>
+	<post>=php.Join(-;(%sambaPrimaryGroupSID%,%sidpgsuffix%))</post>
+	<spacer>1</spacer>
+	<value><![CDATA[=php.PickList(/;(objectClass=sambaGroupMapping);sambaSID;%sambaSID% (%cn%);sambaPrimaryGroupSID)]]></value>
+</attribute>
+-->
+<attribute id="homeDirectory">
+	<display>Home directory</display>
+	<order>14</order>
+	<page>1</page>
+</attribute>
+<attribute id="sambaAcctFlags">
+	<hidden>1</hidden>
+	<value>[U]</value>
+</attribute>
+<attribute id="sambaBadPasswordCount">
+	<hidden>1</hidden>
+	<value>0</value>
+</attribute>
+<attribute id="sambaBadPasswordTime">
+	<hidden>1</hidden>
+	<value>0</value>
+</attribute>
+<attribute id="sambaLogoffTime">
+	<hidden>1</hidden>
+	<value>9223372036854775807</value>
+</attribute>
+<attribute id="sambaLogonHours">
+	<hidden>1</hidden>
+	<value>FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</value>
+</attribute>
+<attribute id="sambaLogonTime">
+	<hidden>1</hidden>
+	<value>0</value>
+</attribute>
+<attribute id="sambaPasswordHistory">
+	<hidden>1</hidden>
+	<value>0000000000000000000000000000000000000000000000000000000000000000</value>
+</attribute>
+<attribute id="sambaPwdCanChange">
+	<hidden>1</hidden>
+	<value>0</value>
+</attribute>
+<attribute id="sambaPwdLastSet">
+	<hidden>0</hidden>
+    <value><![CDATA[=php.Function(time;)]]></value>
+</attribute>
+<attribute id="sambaPwdMustChange">
+	<hidden>1</hidden>
+	<value>9223372036854775807</value>
+</attribute>
+</attributes>
+</template>
