@@ -9,3 +9,4 @@ lighttpd
 php5-cgi
 php5-ldap
 
+samba-doc
