@@ -15,6 +15,11 @@ turnkey-openldap-14.2 (1) turnkey; urgency=low
 
     - Changes come from https://github.com/jstruebel/openldap-pla.git
 
+  * Added Samba schema to ldap database and corresponding custom templates
+    to phpLDAPAdmin
+
+    - Changes come from https://github.com/jstruebel/openldap-samba.git
+
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.i
 
